tests/checker/ok/recursive_type_tree.can
Branch = Left * Right * Value

Leaf = Unit

Left = Tree

Right = Tree

Tree = Branch + Leaf

Value = Int

describe = (Tree) => String {
    Tree -> (
        * Branch => String { "branch" }
        * Leaf => String { "leaf" }
    )
}

Unit => Program {
    Leaf()
        .describe()
        -> Print
}
