tests/checker/fail/unknown_newtype_field.can
Greeting = String

Unit => Program {
    Greeting("hi").Int.print()
}
